# soapWebsocketC

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
lib/: charset.lib  gstcheck-1.0.lib  gstcodecparsers-1.0.def  gstcodecparsers-1.0.lib  gstcodecs-1.0.lib  gstcuda-1.0.def  gstcuda-1.0.lib  iconv.lib  mpg123.lib  pangocairo-1.0.lib
src/: exampleOfWebsocket.c  main.c  reciever.c  sender.c
